[project]
name = "sea-turtle-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coqui-tts>=0.27.0",
    "ollama>=0.5.1",
    "pyaudio>=0.2.14",
    "pyttsx3>=2.99",
    "sounddevice>=0.5.2",
    "vosk>=0.3.45",
]
