[project]
name = "sea-turtle-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kittentts",
    "ollama>=0.5.2",
    "pyaudio>=0.2.14",
    "sounddevice>=0.5.2",
    "vosk>=0.3.45",
]

[tool.uv.sources]
kittentts = { git = "https://github.com/KittenML/KittenTTS.git" }
